Fix: Vertical align on button glyph

--- a/__core.scss
+++ b/__core.scss
@@ -88,7 +88,7 @@
 		}
 
 		.button-glyph {
-			vertical-align: middle;
+			vertical-align: baseline;
 			line-height: normal;
 			display: inline-block;
 			margin: 0;
